pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-217-link_reference_definitions.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 124
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/217-link_reference_definitions.md
---
]8;;file://HOSTNAME/ROOT/foo-url\[34mfoo[0m]8;;\, ]8;;file://HOSTNAME/ROOT/bar-url\[34mbar[0m]8;;\, ]8;;file://HOSTNAME/ROOT/baz-url\[34mbaz[0m]8;;\
